acomodado html de footers

--- a/academia.html
+++ b/academia.html
@@ -27,14 +27,14 @@
 <div class="fotos" style="">
   <h3></h3>
   <br>
-<img src="img/acad1.jpg" class="img-fluid" alt="Responsive image"; >
-<img src="img/acad2.jpg" class="img-fluid" alt="Responsive image" ;>
-<img src="img/acad3.jpg" class="img-fluid" alt="Responsive image"; >
-<img src="img/acad4.jpg" class="img-fluid" alt="Responsive image" ;>
-<img src="img/acad5.jpg" class="img-fluid" alt="Responsive image";>
-<img src="img/acad6.jpg" class="img-fluid" alt="Responsive image";>
-<img src="img/acad7.jpg" class="img-fluid" alt="Responsive image";>
-<img src="img/acad8.jpg" class="img-fluid" alt="Responsive image";>
+<img src="img/acad1.jpg" class="img-thumbnail" alt="Responsive image"; >
+<img src="img/acad2.jpg" class="img-thumbnail" alt="Responsive image" ;>
+<img src="img/acad3.jpg" class="img-thumbnail" alt="Responsive image"; >
+<img src="img/acad4.jpg" class="img-thumbnail" alt="Responsive image" ;>
+<img src="img/acad5.jpg" class="img-thumbnail" alt="Responsive image";>
+<img src="img/acad6.jpg" class="img-thumbnail" alt="Responsive image";>
+<img src="img/acad7.jpg" class="img-thumbnail" alt="Responsive image";>
+<img src="img/acad8.jpg" class="img-thumbnail" alt="Responsive image";>
 <video src="https://www.facebook.com/304821913452701/posts/317836152151277/"></video>
 
 
@@ -62,9 +62,10 @@
 			<li><a href="formulario.html" style="color:#CFCBCB;">Formulario de Registro</a></li>
 			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
+		<div>
+			<p class="autor">© 2019 The Golf Shop|Diseño y Programación: TNS Designs</p>
+		</div>
+
 </footer>
-
-
-
 </body>
 </html>
