--- a/contacto.html
+++ b/contacto.html
@@ -66,6 +66,9 @@
 			<li><a href="formulario.html" style="color:#CFCBCB;">Formulario de Registro</a></li>
 
 		</ul>
+		<div>
+			<p class="autor">© 2019 The Golf Shop|Diseño y Programación: TNS Designs</p>
+		</div>
 </footer>
 
 
