--- a/formulario.html
+++ b/formulario.html
@@ -93,6 +93,9 @@
 			<li><a href="preguntas.html" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
 			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
+		<div>
+			<p class="autor">© 2019 The Golf Shop|Diseño y Programación: TNS Designs</p>
+		</div>
 </footer>
 
 
