--- a/preguntas.html
+++ b/preguntas.html
@@ -46,7 +46,7 @@ Es facil, debe ir al pie de la pagina e ingresar en Formulario de Registro.
 	  </ul>
 	</div>
 
-</body>
+
 
 
 <footer>
@@ -60,8 +60,11 @@ Es facil, debe ir al pie de la pagina e ingresar en Formulario de Registro.
 			<li><a href="formulario.html" style="color:#CFCBCB;">Formulario de registro</a></li>
 			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
+		<div>
+			<p class="autor">© 2019 The Golf Shop|Diseño y Programación: TNS Designs</p>
+		</div>
 </footer>
-
+</body>
 
 
 </body>
