--- a/putter.html
+++ b/putter.html
@@ -60,7 +60,8 @@
 							<h1>P U T T E R S</h1>
 						</div>
 					</div>
-
+</header>
+<main>
 					<!--/==========================PRIMERA CARTA===============================-->
 				<div class="container">
 					<div class="card" style="width: 18rem;">
@@ -111,7 +112,7 @@
 						</div>
 					</div>
 				</div>
-
+</main>
 					<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 					<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -129,6 +130,9 @@
 					<li><a href="formulario.html" style="color:#CFCBCB;">Formulario de Registro</a></li>
 					<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 				</ul>
+				<div>
+					<p class="autor">© 2019 The Golf Shop|Diseño y Programación: TNS Designs</p>
+				</div>
 		</footer>
 
 </html>
