--- a/login.html
+++ b/login.html
@@ -1,43 +1,88 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-				<link rel="stylesheet" href="css/style.css">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
+	<title>The Golf Shop</title>
+</head>
 
-		<title>The Golf Shop</title>
-		<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
-	</head>
-	<body>
-		<header class="golfshop">
-<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
-
-<h1 id="Titulo">
-  LOG IN
-</h1>
+<body>
+	<header class="golfshop">
+		<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
 	</header>
 
+	<div class="row">
+		<div class="col-md-4">
+			<!-- LIBRE -->
+		</div>
 
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4"></div>
+					<div class="col-md-4">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h3 class="panel-title">Formulario de ingreso</h3>
+							</div>
+								<div class="panel-body">
+									<form action=""#"" method="POST">
+										<div class="form-group">
+											<label for="mail">E-mail</label>
+											<div class="input-group">
+												<span class="input-group-addon"> <span class="fas fa-eye"><i class="fas fa-eye"></i> </span>
+											</span>
+											<input type="email" class="form-control" id="mail" placeholder="Ingrese su E-mail">
+										</div>
+									</div>
+									<div class="form-group">
+										<label for="pass">Contraseña</label>
+										<div class="input-group">
 
+											<span class="input-group-addon">
+												<span class="glyphicon glyphicon-asterisk"> </span>
+											</span>
+											<input type="password" class="form-control" id="pass" placeholder="Ingrese su contraseña">
+										</div>
+									</div>
+									<hr/>
+									<button type="submit" class="btn btn-success">
+										<span class="glyphicon glyphicon-ok"></span> Entrar</button><p><br/></p>
+									</form>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+						</div>
+					</div>
+					</div>
+			</div>
+			<div class="col-md-4">
+				<!-- LIBRE -->
+			</div>
+			<!--<form>
+			  <div class="form-group">
+			    <label for="exampleInputEmail1">Email</label>
+			    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+			    <small id="emailHelp" class="form-text text-muted">No compartiremos su email con nadie</small>
+			  </div>
+			  <div class="form-group">
+			    <label for="exampleInputPassword1">Clave</label>
+			    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+			  </div>
+			  <div class="form-group form-check">
+			    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+			    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+			  </div>
+			  <button type="submit" class="btn btn-success">Ingresar</button>
+			</form>-->
 
-	<form>
-	  <div class="form-group">
-	    <label for="exampleInputEmail1">Email</label>
-	    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-	    <small id="emailHelp" class="form-text text-muted">No compartiremos su email con nadie</small>
-	  </div>
-	  <div class="form-group">
-	    <label for="exampleInputPassword1">Clave</label>
-	    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-	  </div>
-	  <div class="form-group form-check">
-	    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-	    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-	  </div>
-	  <button type="submit" class="btn btn-success">Ingresar</button>
-	</form>
-
+			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
 
 <footer>
 	<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
@@ -53,7 +98,4 @@
 		</ul>
 </footer>
 
-
-
-</body>
 </html>
