--- a/login.html
+++ b/login.html
@@ -96,6 +96,9 @@
 			<li><a href="formulario.html" style="color:#CFCBCB;">Formulario de Registro</a></li>
 			<li><a href="contacto.html" style="color:#CFCBCB;">Contacto</a></li>
 		</ul>
+		<div>
+			<p class="autor">© 2019 The Golf Shop|Diseño y Programación: TNS Designs</p>
+		</div>
 </footer>
 
 </html>
