un poco de estilo a login, putter corregido para que sea responsive
falta index hacer responsive
se agrega "INGRESA" en index para el login

--- a/index.html
+++ b/index.html
@@ -33,33 +33,33 @@
 						<li class="nav-item active">
 							<a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="academia.html">Nuestra Escuela</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								Nuestros Articulos
-							</a>
-									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-										<a class="dropdown-item" href="#drivers">Drivers</a>
-										<a class="dropdown-item" href="hierros.html">Hierros</a>
-										<a class="dropdown-item" href="putter.html">Putters</a>
-										<div class="dropdown-divider"></div>
-										<a class="dropdown-item" href="accesorios.html">Accesorios</a>
-									</div>
-										</li>
+							<li class="nav-item">
+								<a class="nav-link" href="academia.html">Nuestra Escuela</a>
+							</li>
+								<li class="nav-item dropdown">
+									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+										Nuestros Articulos
+									</a>
+											<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+												<a class="dropdown-item" href="#drivers">Drivers</a>
+													<a class="dropdown-item" href="hierros.html">Hierros</a>
+														<a class="dropdown-item" href="putter.html">Putters</a>
+													<div class="dropdown-divider"></div>
+												<a class="dropdown-item" href="accesorios.html">Accesorios</a>
+											</div>
+								</li>
 											<li class="nav-item">
-												<!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
+												<a class="nav-link" href="login.html" tabindex="-1" aria-disabled="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>INGRESA</b></a>
 											</li>
 					</ul>
-												<form class="form-inline my-2 my-lg-0">
-													<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
-													<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
-												</form>
-											</div>
-														<a href="carrito.html" class="volver"><i class="fas fa-2x fa-shopping-cart" style="color:#18EB8E ";></i></a>
+									<form class="form-inline my-2 my-lg-0">
+										<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
+											<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
+									</form>
+					</div>
+									<a href="carrito.html" class="volver"><i class="fas fa-2x fa-shopping-cart" style="color:#18EB8E ";></i></a>
 				</nav>
-														<h1 id="Titulo">D R I V E R S</h1>
+									<h1 id="Titulo">D R I V E R S</h1>
 
 			</header>
 			<main>
