--- a/login.html
+++ b/login.html
@@ -23,28 +23,29 @@
 			<div class="row">
 				<div class="col-md-4"></div>
 					<div class="col-md-4">
-						<div class="panel panel-default">
+						<div class="panel_login">
 							<div class="panel-heading">
-								<h3 class="panel-title">Formulario de ingreso</h3>
+							<p class="hola">¡Hola! Ingresa tu mail y Contraseña</p>
+								<!--<h3 class="panel-title">Formulario de ingreso</h3>-->
 							</div>
 								<div class="panel-body">
 									<form action=""#"" method="POST">
 										<div class="form-group">
-											<label for="mail">E-mail</label>
+											<!--<label for="mail">E-mail</label>-->
 											<div class="input-group">
 												<span class="input-group-addon"> <span class="fas fa-eye"><i class="fas fa-eye"></i> </span>
 											</span>
-											<input type="email" class="form-control" id="mail" placeholder="Ingrese su E-mail">
+											<input type="email" class="form-control" id="mail" placeholder="E-mail">
 										</div>
 									</div>
 									<div class="form-group">
-										<label for="pass">Contraseña</label>
+										<!--<label for="pass">Contraseña</label>-->
 										<div class="input-group">
 
 											<span class="input-group-addon">
 												<span class="glyphicon glyphicon-asterisk"> </span>
 											</span>
-											<input type="password" class="form-control" id="pass" placeholder="Ingrese su contraseña">
+											<input type="password" class="form-control" id="pass" placeholder="Contraseña">
 										</div>
 									</div>
 									<hr/>
