--- a/putter.html
+++ b/putter.html
@@ -62,11 +62,21 @@
 					</div>
 </header>
 <main>
+	<div class="row">
+		<div class="col-md-1">
+			<!-- LIBRE -->
+		</div>
 					<!--/==========================PRIMERA CARTA===============================-->
 				<div class="container">
+					<div class="row">
+						<!--<div class="col-lg-6"></div>-->
+							<div class="col-md-12">
 					<div class="card" style="width: 18rem;">
 					  <img src="img/putteroddy.jpg" class="card-img-top" alt="...">
 					  <div class="card-body">
+							<br>
+							<br>
+							<br>
 					    <h5 class="card-title">ODDYSSEY</h5>
 					    <p class="card-text">Consulte por modelos y varas</p>
 					    <a href="#" class="btn btn-success">COMPRAR</a>
@@ -112,6 +122,14 @@
 						</div>
 					</div>
 				</div>
+				<div class="col-md-12">
+				</div>
+			</div>
+			</div>
+	</div>
+	<div class="col-md-1">
+		<!-- LIBRE -->
+	</div>
 </main>
 					<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
