--- a/index.html
+++ b/index.html
@@ -60,13 +60,19 @@
 									<a href="carrito.html" class="volver"><i class="fas fa-2x fa-shopping-cart" style="color:#18EB8E ";></i></a>
 				</nav>
 									<h1 id="Titulo">D R I V E R S</h1>
-
 			</header>
+
 			<main>
+				<div class="row">
+					<div class="col-md-1">
+						<!-- LIBRE -->
+					</div>
 	<!--===================ARTICULOS EN CARTAS==========================================-->
-			<div class="container-card">
-							<div class="card-deck" style="width:70%">
-								<div class="card" style="width: 18rem;">
+			<div class="container">
+				<div class="cartas">
+					<div class="col-md-12">
+							<div class="card-deck"> <!--style="width:70%">-->
+								<div class="card"> <!--style="width: 18rem;">-->
 								<img src="img/driverepic_resultado.jpg" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title">CALLAWAY EPIC</h5>
@@ -74,7 +80,7 @@
 									<a href="#" class="btn btn-success">COMPRAR</a>
 								</div>
 							</div>
-							<div class="card" style="width: 18rem;">
+							<div class="card"> <!--style="width: 18rem;">-->
 								<img src="img/drivers_resultado.jpg" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title">DRIVERS CALLAWAY</h5>
@@ -82,7 +88,7 @@
 									<a href="#" class="btn btn-success">COMPRAR</a>
 								</div>
 							</div>
-							<div class="card" style="width: 18rem;">
+							<div class="card"> <!--style="width: 18rem;">-->
 								<img src="img/driverxr_resultado.jpg" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title">CALLAWAY XR</h5>
@@ -93,8 +99,8 @@
 						</div>
 						<br>
 <!--===================ARTICULOS EN CARTAS==========================================-->
-						<div class="card-deck" style="width:70%">
-							<div class="card" style="width: 18rem;">
+						<div class="card-deck"> <!--style="width:70%">-->
+							<div class="card"> <!--style="width: 18rem;">-->
 								<img src="img/ping_hierros_resultado.jpg" class="card-img-top" alt="...">
 							<div class="card-body">
 								<h5 class="card-title">PING DRIVER</h5>
@@ -102,7 +108,7 @@
 										<a href="#" class="btn btn-success">COMPRAR</a>
 									</div>
 							</div>
-								<div class="card" style="width: 18rem;">
+								<div class="card"> <!--style="width: 18rem;">-->
 									<img src="img/driverpingg400_resultado.jpg" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title">PING G400</h5>
@@ -110,7 +116,7 @@
 											<a href="#" class="btn btn-success">COMPRAR</a>
 										</div>
 								</div>
-							<div class="card" style="width: 18rem;">
+							<div class="card"> <!--style="width: 18rem;">-->
 								<img src="img/driverm3m4_resultado.jpg" class="card-img-top" alt="...">
 									<div class="card-body">
 											<h5 class="card-title">TAYLOR MADE M3 y M4</h5>
@@ -119,6 +125,10 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-12">
+						</div>
+					</div>
+				</div>
 				</div>
 				</main>
 
@@ -127,7 +137,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-
+</body>
 <footer>
 		<img src="img/academia_anto.png" alt="" class="academia" style="width: 20%">
 	<style>a {text-decoration: none;} </style>
@@ -142,5 +152,5 @@
 			<p class="autor">© 2019 The Golf Shop|Diseño y Programación: TNS Designs</p>
 		</div>
 </footer>
-</body>
+
 </html>
