--- a/carrito.html
+++ b/carrito.html
@@ -15,31 +15,47 @@
       </header>
 
     <section>
-      <div class="jumbotron">
-          <h1 class="display-6">ARTICULOS SELECCIONADOS</h1>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">Articulo 1</li>
-              <li class="list-group-item">Articulo 2</li>
-              <li class="list-group-item">Articulo 3</li>
-            </ul>
-        <div class="pago" container>
-          <hr class="my-4">
-            <p class="total">TOTAL $</p>
-              <a class="btn btn-success btn-lg" href="#" role="button">PAGAR</a>
+      <div class="row">
+    		<div class="col-md-4">
+    			<!-- LIBRE -->
+    		</div>
+
+      <div class="container">
+        <div class="articulos">
+          <div class="col-md-8"></div>
+  					<div class="col-md-8">
+          <div class="jumbotron">
+              <h1 class="display-6">ARTICULOS SELECCIONADOS</h1>
+                <ul class="list-group list-group-horizontal">
+                  <li class="list-group-item">Articulo 1</li>
+                  <li class="list-group-item">Articulo 2</li>
+                  <li class="list-group-item">Articulo 3</li>
+                </ul>
+                  <div class="pago">
+                    <hr class="my-4">
+                      <p class="total">TOTAL $</p>
+                        <a class="btn btn-success btn-lg" href="#" role="button">PAGAR</a>
+                  </div>
+          </div>
+              <div class="tarjetas">
+                <img src="img/paypal.png" alt="">
+                <img src="img/americanexpress.png" alt="">
+                <img src="img/mastercard.png" alt="">
+                <img src="img/visa.png" alt="">
+              </div>
         </div>
       </div>
-        <div class="tarjetas">
-          <img src="img/paypal.png" alt="">
-          <img src="img/americanexpress.png" alt="">
-          <img src="img/mastercard.png" alt="">
-          <img src="img/visa.png" alt="">
-        </div>
+      <div class="col-md-8">
+      </div>
+      <div class="col-md-4">
+				<!-- LIBRE -->
+			</div>
     </section>
 
-    <footer>
-    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
+  <footer>
+  </footer>
 </html>
