--- a/login.html
+++ b/login.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
-	<header class="golfshop">
-		<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
+	<header>
+		<div class="container">
+			<div class="golfshop">
+				<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
+			</div>
 	</header>
 
 	<div class="row">
