Algunos cambios mas de estilo........

--- a/accesorios.html
+++ b/accesorios.html
@@ -3,165 +3,180 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-				<link rel="stylesheet" href="css/style.css">
-
-		<title>The Golf Shop</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<script src="https://kit.fontawesome.com/0cb2d9cf91.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="css/styleaccesorios.css">
+		<title>The Golf Shop</title>
 	</head>
-	<body>
-		<header class="golfshop">
-<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
-	<div class="container">
 
-		<!-- boton buscar -->
+<body>
 
+					<header class="golfshop">
+							<a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
+							<div class="container">
+							<nav class="navbar navbar-expand-lg navbar-light bg-light">
+									<a class="navbar-brand" href="#">The Golf Shop</a>
+											<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+										<span class="navbar-toggler-icon"></span>
+									</button>
 
-	<form class="form-inline my-2 my-lg-0">
-		<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
-		<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
-	</form>
-</div>
-<h1 id="Titulo">
-  ACCESORIOS
-</h1>
-	</header>
+									<div class="collapse navbar-collapse" id="navbarSupportedContent">
+										<ul class="navbar-nav mr-auto">
+											<li class="nav-item active">
+												<a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+											</li>
+												<li class="nav-item">
+													<a class="nav-link" href="academia.html">Nuestra Escuela</a>
+												</li>
+													<li class="nav-item dropdown">
+														<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+															Nuestros Articulos
+														</a>
+																<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+																	<a class="dropdown-item" href="#drivers">Drivers</a>
+																		<a class="dropdown-item" href="hierros.html">Hierros</a>
+																			<a class="dropdown-item" href="putter.html">Putters</a>
+																		<div class="dropdown-divider"></div>
+																	<a class="dropdown-item" href="accesorios.html">Accesorios</a>
+																</div>
+													</li>
+																<li class="nav-item">
+																	<a class="nav-link" href="login.html" tabindex="-1" aria-disabled="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>INGRESA</b></a>
+																</li>
+										</ul>
+														<form class="form-inline my-2 my-lg-0">
+															<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
+																<button class="btn btn-outline-success gr-22 gr-sm-22" type="submit">Buscar</button>
+														</form>
+										</div>
+														<a href="carrito.html" class="volver"><i class="fas fa-2x fa-shopping-cart" style="color:#18EB8E ";></i></a>
+									</nav>
+					</header>
 
-<main>
-<div class="subtitulo" style="">
-  <h3>BOLSAS</h3>
-  <br>
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/bolsacall.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">CALLAWAY</h5>
-    <p class="card-text">Impermeable!</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
+					<div class="row">
+						<div class="col-md-4">
+							<!-- LIBRE -->
+						</div>
+						<div class="container">
+							<div class="varios">
+						<div class="col-md-8">
+						<h1 id="Titulo">A C C E S O R I O S</h1>
 
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/bolsacarro.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">CALLAWAY </h5>
-    <p class="card-text">Ideal para usar con carro</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-<div class="subtitulo" style="">
-  <h3>GUANTES</h3>
-  <br>
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/guantefj.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">FOOT JOY</h5>
-    <p class="card-text">Cabretilla</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
+			<!--/==========================PRIMERA CARTA===============================-->
+			<div class="card" style="width: 10rem;">
+			  <img src="img/bolsacall_resultado.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">CALLAWAY</h5>
+			    <p class="card-text">Impermeable!</p>
+			    <a href="#" class="btn btn-success">COMPRAR</a>
+			  </div>
+			</div>
 
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/guantes.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">CALLAWAY </h5>
-    <p class="card-text">Varios colores</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-
-
-</div>
-
-
-
-
-<div class="subtitulo" style="">
-  <h3>GORRAS</h3>
-  <br>
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/gorrastit.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">TITLEIST</h5>
-    <p class="card-text">Varios colores</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/gorrasm3.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">TAYLOR MADE </h5>
-    <p class="card-text">M3</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-</div>
-
-<div class="subtitulo" style="">
-  <h3>PELOTAS</h3>
-  <br>
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/pelotasprov1.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">TITLEIST PROV1</h5>
-    <p class="card-text">#1 en el PGA Tour</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/pelotastour.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">TITLEIST </h5>
-    <p class="card-text">Tour Soft</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-
-<!--/==========================PRIMERA CARTA===============================-->
-<div class="card" style="width: 18rem;">
-  <img src="img/pelotascall.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">CALLAWAY</h5>
-    <p class="card-text">CHROME SOFT</p>
-    <a href="#" class="btn btn-success">COMPRAR</a>
-  </div>
-</div>
-</div>
-</main>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
-
-<footer>
-	<img src="/Applications/MAMP/htdocs/PROYECTOS/ecommerce/img/LOGO ACADEMIA.jpg" alt="" class="academia">
-	<img src="img/academia_anto.png" alt="" class="academia" style="width:20%";>
-
-	<style>a {text-decoration: none;} </style>
-		<ul class="sinvineta1">
-			<li><a href="index.html" style="color:#CFCBCB;">Home</a></li>
-			<br>
-			<li><a href="www.preguntas.com" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
-			<li><a href="formulario.com" style="color:#CFCBCB;">Formulario de Registro</a></li>
-			<li><a href="contacto.com" style="color:#CFCBCB;">Contacto</a></li>
-		</ul>
-		<div>
-			<p class="autor">© 2019 The Golf Shop|Diseño y Programación: TNS Designs</p>
+			<!--/==========================PRIMERA CARTA===============================-->
+			<div class="card" style="width: 10rem;">
+			  <img src="img/bolsacarro_resultado.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">CALLAWAY </h5>
+			    <p class="card-text">Uso con carro</p>
+			    <a href="#" class="btn btn-success">COMPRAR</a>
+			  </div>
+			</div>
+			<!--/==========================PRIMERA CARTA===============================-->
+			<div class="card" style="width: 10rem;">
+			  <img src="img/guantefj_resultado.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">FOOT JOY</h5>
+			    <p class="card-text">Cabretilla</p>
+			    <a href="#" class="btn btn-success">COMPRAR</a>
+			  </div>
+			</div>
+			<!--/==========================PRIMERA CARTA===============================-->
+			<div class="card" style="width: 10rem;">
+			  <img src="img/guantes_resultado.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">CALLAWAY </h5>
+			    <p class="card-text">Varios colores</p>
+			    <a href="#" class="btn btn-success">COMPRAR</a>
+			  </div>
+			</div>
+			<!--/==========================PRIMERA CARTA===============================-->
+			<div class="card" style="width: 10rem;">
+			  <img src="img/gorrastit_resultado.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">TITLEIST</h5>
+			    <p class="card-text">Varios colores</p>
+			    <a href="#" class="btn btn-success">COMPRAR</a>
+			  </div>
+			</div>
+			<div class="card" style="width: 10rem;">
+			  <img src="img/gorrasm3_resultado.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">TAYLOR MADE </h5>
+			    <p class="card-text">M3</p>
+			    <a href="#" class="btn btn-success">COMPRAR</a>
+			  </div>
+			</div>
+			<!--/==========================PRIMERA CARTA===============================-->
+			<div class="card" style="width: 10rem;">
+			  <img src="img/pelotasprov1_resultado.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">TITLEIST PROV1</h5>
+			    <p class="card-text">#1 en el PGA Tour</p>
+			    <a href="#" class="btn btn-success">COMPRAR</a>
+			  </div>
+			</div>
+			<!--/==========================PRIMERA CARTA===============================-->
+			<div class="card" <style="width: 10rem;">
+			  <img src="img/pelotastour_resultado.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">TITLEIST </h5>
+			    <p class="card-text">Tour Soft</p>
+			    <a href="#" class="btn btn-success">COMPRAR</a>
+			  </div>
+			</div>
+			<!--/==========================PRIMERA CARTA===============================-->
+			<div class="card" style="width: 10rem;">
+			  <img src="img/pelotascall_resultado.jpg" class="card-img-top" alt="...">
+			  <div class="card-body">
+			    <h5 class="card-title">CALLAWAY</h5>
+			    <p class="card-text">CHROME SOFT</p>
+			    <a href="#" class="btn btn-success">COMPRAR</a>
+			  </div>
+			</div>
+			</div>
 		</div>
-</footer>
+		</div>
+			<div class="col-md-8">
+	</div>
+</div>
+</div>
+<div class="col-md-4">
+	<!-- LIBRE -->
+</div>
+		</main>
 
-
+				<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+				<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
+
+<footer>
+	
+	<img src="img/academia_anto.png" alt="" class="academia" style="width:20%";>
+
+		<style>a {text-decoration: none;} </style>
+			<ul class="sinvineta1">
+				<li><a href="index.html" style="color:#CFCBCB;">Home</a></li>
+				<br>
+						<li><a href="www.preguntas.com" style="color:#CFCBCB;">Preguntas Frecuentes</a></li>
+					<li><a href="formulario.com" style="color:#CFCBCB;">Formulario de Registro</a></li>
+				<li><a href="contacto.com" style="color:#CFCBCB;">Contacto</a></li>
+			</ul>
+			<div>
+				<p class="autor">© 2019 The Golf Shop|Diseño y Programación: TNS Designs</p>
+			</div>
+</footer>
+
 </html>
