--- a/formulario.html
+++ b/formulario.html
@@ -85,7 +85,7 @@
       </label>
     </div>
   </div>-->
-  <button type="submit" class="btn btn-success">Sign in</button>
+  <button type="submit" class="btn btn-success">Enviar</button>
 </form>
 <div class="col-md-4">
 </div>
