--- a/putter.html
+++ b/putter.html
@@ -138,7 +138,7 @@
 					<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 		<footer>
-			<img src="img/academia_anto.png" alt="" class="academia"> <!--<style="width:10% height:10%">-->
+			<img src="img/academia_anto.png" alt="" class="academia" style="width:20%";>
 
 			<style>a {text-decoration: none;} </style>
 				<ul class="sinvineta1">
