--- a/academia.html
+++ b/academia.html
@@ -11,43 +11,54 @@
 	</head>
 	<body>
 		<header class="academia">
+
 <a href="index.html" class="volver"><img src="img/shopgolf.png" alt=""></a>
-	<div class="container">
+			<!-- boton buscar -->
 
-		<!-- boton buscar -->
+<img src="./img/academia_anto.png" alt="" class="fotoacad" width=40%>
+<div>
+	<p class="titulo">Clases de Golf</p>
+	<p class="titulo">Todas las edades y niveles</p>
+</div>
 
-<img src="./img/academia_anto.png" alt="" class="fotoacad">
-<h1  id="academia">
-  Clases de Golf
-</h1>
-<h3 class="academia">Todas las edades y niveles</h3>
 	</header>
 
 <section>
-<div class="fotos" style="">
-  <h3></h3>
-  <br>
-<img src="img/acad1.jpg" class="img-thumbnail" alt="Responsive image"; >
-<img src="img/acad2.jpg" class="img-thumbnail" alt="Responsive image" ;>
-<img src="img/acad3.jpg" class="img-thumbnail" alt="Responsive image"; >
-<img src="img/acad4.jpg" class="img-thumbnail" alt="Responsive image" ;>
-<img src="img/acad5.jpg" class="img-thumbnail" alt="Responsive image";>
-<img src="img/acad6.jpg" class="img-thumbnail" alt="Responsive image";>
-<img src="img/acad7.jpg" class="img-thumbnail" alt="Responsive image";>
-<img src="img/acad8.jpg" class="img-thumbnail" alt="Responsive image";>
+<!--
+	<div class="row">
+<div class="col-md-4">
+<!-- libre -->
+<!--</div>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4"></div>
+				<div class="col-md-4">
+			<div class="fotos" style="">
+			-->
+  <div class= "container">
+		<div class="fotos">
+<img src="img/acad1.jpg" class="img-fluid" alt="Responsive image"; >
+<img src="img/acad2.jpg" class="img-fluid" alt="Responsive image" ;>
+<img src="img/acad3.jpg" class="img-fluid" alt="Responsive image"; >
+<img src="img/acad4.jpg" class="img-fluid" alt="Responsive image" ;>
+<img src="img/acad5.jpg" class="img-fluid" alt="Responsive image";>
+<img src="img/acad6.jpg" class="img-fluid" alt="Responsive image";>
+<img src="img/acad7.jpg" class="img-fluid" alt="Responsive image";>
+<img src="img/acad8.jpg" class="img-fluid" alt="Responsive image";>
 <video src="https://www.facebook.com/304821913452701/posts/317836152151277/"></video>
-
-
-
+</div>
 </div>
 
+<!--
+<div class="col-md-4">
+	<!-- LIBRE
+</div> -->
 
 
 
-<div class="subtitulo" style="">
-  <h3></h3>
-  <br>
-</div>
+
 
 </section>
 
