nuestra escuela casi responsive

--- a/academia.html
+++ b/academia.html
@@ -40,14 +40,27 @@
   <div class= "container">
 		<div class="fotos">
 <img src="img/acad1.jpg" class="img-fluid" alt="Responsive image"; >
+</div>
+<div class="fotos">
 <img src="img/acad2.jpg" class="img-fluid" alt="Responsive image" ;>
+</div>
+<div class="fotos">
 <img src="img/acad3.jpg" class="img-fluid" alt="Responsive image"; >
+</div>
+<div class="fotos">
 <img src="img/acad4.jpg" class="img-fluid" alt="Responsive image" ;>
+</div>
+<div class="fotos">
 <img src="img/acad5.jpg" class="img-fluid" alt="Responsive image";>
+</div>
+<div class="fotos">
 <img src="img/acad6.jpg" class="img-fluid" alt="Responsive image";>
+</div>
+<div class="fotos">
 <img src="img/acad7.jpg" class="img-fluid" alt="Responsive image";>
+</div>
+<div class="fotos">
 <img src="img/acad8.jpg" class="img-fluid" alt="Responsive image";>
-<video src="https://www.facebook.com/304821913452701/posts/317836152151277/"></video>
 </div>
 </div>
 
