formulario1 con provincias en array

--- a/formulario.html
+++ b/formulario.html
@@ -69,7 +69,31 @@
       <label for="inputState">Provincia</label>
       <select id="inputState" class="form-control">
         <option selected>Elija...</option>
-        <option>...</option>
+				<option value="Tuc">Tucumán</option>
+			 				<option value="Bsas">Buenos Aires</option>
+			 				<option value="Cat">Catamarca</option>
+			         <option value="Cha">Chaco</option>
+			 				<option value="Chu">Chubut</option>
+			 				<option value="Cor">Córdoba</option>
+			         <option value="Corr">Corrientes</option>
+			         <option value="Ent">Entre Ríos</option>
+			         <option value="For">Formosa</option>
+			         <option value="Juj">Jujuy</option>
+			         <option value="Lap">La Pampa</option>
+			         <option value="Lar">La Rioja</option>
+			         <option value="Men">Mendoza</option>
+			         <option value="Mis">Misiones</option>
+			         <option value="Neu">Neuquén</option>
+			         <option value="Rio">Río Negro</option>
+			         <option value="Sal">Salta</option>
+			         <option value="SanJ">San Juan</option>
+			         <option value="SanL">San Luis</option>
+			         <option value="Sant">Santa Cruz</option>
+			         <option value="SanF">Santa Fe</option>
+			         <option value="Sgo">Santiago del Estero</option>
+			         <option value="Tie">Tierra del Fuego</option>
+
+
       </select>
     </div>
     <div class="form-group col-md-2">
