--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
 											<div class="input-group">
 												<span class="input-group-addon"> <span class="fas fa-eye"><i class="fas fa-eye"></i> </span>
 											</span>
-											<input type="email" class="form-control" id="mail" placeholder="E-mail">
+											<input type="email" class="form-control" id="mail" placeholder="&#128272; E-mail">
 										</div>
 									</div>
 									<div class="form-group">
@@ -48,7 +48,7 @@
 											<span class="input-group-addon">
 												<span class="glyphicon glyphicon-asterisk"> </span>
 											</span>
-											<input type="password" class="form-control" id="pass" placeholder="Contraseña">
+											<input type="password" class="form-control" id="pass" placeholder="&#128272; Contraseña">
 										</div>
 									</div>
 									<hr/>
